use apache base64 encoder